--- a/app/package.json
+++ b/app/package.json
@@ -8,10 +8,17 @@
     "android": "npm run bundle && expo run:android",
     "ios": "npm run bundle && expo run:ios",
     "web": "expo start --web",
-    "barelog": "adb logcat '*:S bare:*'"
+    "barelog": "adb logcat '*:S bare:*'",
+    "format": "prettier --write .",
+    "lint": "eslint . --ext .js,.jsx",
+    "lint:fix": "eslint . --ext .js,.jsx --fix"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/native-stack": "^7.1.14",
+    "@react-navigation/stack": "^7.0.18",
     "b4a": "1.6.7",
     "events": "^3.3.0",
     "expo": "~52.0.10",
@@ -19,15 +26,38 @@
     "expo-status-bar": "~2.0.0",
     "hypercore-crypto": "3.4.2",
     "hyperswarm": "4.8.4",
+    "mitt": "^3.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-bare-kit": "0.3.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "tiny-emitter": "2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
-    "bare-pack": "1.1.3"
+    "@eslint/js": "^9.16.0",
+    "@react-navigation/native": "^7.0.13",
+    "@types/b4a": "^1.6.4",
+    "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
+    "@types/react-navigation": "^3.4.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "bare-pack": "1.1.3",
+    "eslint": "^8.57.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-native": "^4.1.0",
+    "globals": "^15.13.0",
+    "prettier": "^3.4.2",
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.17.0"
   }
 }
