--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pearbare",
   "version": "0.1.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "bundle": "./script/bundle_worklet.sh",
@@ -10,8 +10,8 @@
     "web": "expo start --web",
     "barelog": "adb logcat '*:S bare:*'",
     "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx",
-    "lint:fix": "eslint . --ext .js,.jsx --fix"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
@@ -37,12 +37,12 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "tiny-emitter": "2.1.0"
+    "tiny-emitter": "2.1.0",
+    "@react-navigation/native": "^7.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@eslint/js": "^9.16.0",
-    "@react-navigation/native": "^7.0.13",
     "@types/b4a": "^1.6.4",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
