--- a/app/package.json
+++ b/app/package.json
@@ -17,9 +17,14 @@
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-clipboard/clipboard": "^1.15.0",
+    "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
+    "@rneui/base": "github:react-native-elements/react-native-elements#base",
+    "@rneui/themed": "^4.0.0-rc.8",
     "b4a": "1.6.7",
+    "dayjs": "^1.11.13",
     "events": "^3.3.0",
     "expo": "~52.0.10",
     "expo-build-properties": "^0.13.1",
@@ -33,12 +38,14 @@
     "react-native-bare-kit": "0.3.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "tiny-emitter": "2.1.0",
-    "@react-navigation/native": "^7.0.13"
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -57,6 +64,7 @@
     "eslint-plugin-react-native": "^4.1.0",
     "globals": "^15.13.0",
     "prettier": "^3.4.2",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.17.0"
   }
