--- a/app/package.json
+++ b/app/package.json
@@ -21,8 +21,10 @@
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
+    "@reduxjs/toolkit": "^2.4.0",
     "@rneui/base": "github:react-native-elements/react-native-elements#base",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@shopify/flash-list": "1.7.1",
     "b4a": "1.6.7",
     "dayjs": "^1.11.13",
     "events": "^3.3.0",
@@ -44,8 +46,10 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
+    "react-redux": "^9.1.2",
     "tiny-emitter": "2.1.0",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
